# rupantor-rs

./: .travis.yml  Cargo.toml  README.md
examples/: test.rs
src/: AvroPhonetic.json  avro.rs  lib.rs  parser.rs
