[package]
name = "rupantor"
version = "0.2.0"
description = "A Bengali Phonetic Parser which is very flexible and supports Avro Phonetic"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
categories = ["text-processing"]
keywords = ["avro-phonetic", "bangla", "bengali", "avro"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/OpenBangla/rupantor-rs"
edition = "2018"

[dependencies]
json = "0.12"
stringplus = "0.1"
